# Injective-Wallet-Generator

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: injective-theme.css
wasm/: Cargo.toml
wasm/src/: lib.rs
