[package]
name = "rust-vue-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_vue_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 加密相关
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
bech32 = "0.9"
hex = "0.4"
# 处理时间（给文件加时间戳）
chrono = "0.4"
tauri-plugin-opener = "2.5.3"
