[package]
name = "injective_wallet"
version = "0.1.0"
edition = "2021"
description = "Injective wallet generation for WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
bech32 = "0.9"
hex = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
